계산기 만들기

--- a/gyesangi.css
+++ b/gyesangi.css
@@ -1,3 +1,12 @@
 * {
     box-sizing: border-box;
 }
+
+.boby {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+    background-color: darkgrey;
+}
