--- a/gyesangi.css
+++ b/gyesangi.css
@@ -10,3 +10,13 @@
     margin: 0;
     background-color: darkgrey;
 }
+
+.button {
+    border: none;
+    border-radius: 5px;
+    font-size: 1.5rem;
+    padding: 0.5rem 1rem;
+    cursor: pointer;
+    background-color: rgba(255, 255, 255, 0.75);
+    box-shadow: 2px 2px 10px;
+}
