--- a/gyesangi.css
+++ b/gyesangi.css
@@ -1,22 +1,8 @@
-* {
-    box-sizing: border-box;
+main {
+    width: 300px;
 }
 
-.boby {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
-    background-color: darkgrey;
-}
-
-.button {
-    border: none;
-    border-radius: 5px;
-    font-size: 1.5rem;
-    padding: 0.5rem 1rem;
-    cursor: pointer;
-    background-color: rgba(255, 255, 255, 0.75);
-    box-shadow: 2px 2px 10px;
+.button-gsg {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
 }
