--- a/gyesangi.css
+++ b/gyesangi.css
@@ -6,3 +6,31 @@ main {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
 }
+
+.ac {
+    grid-column: 1/4;
+}
+
+.zero {
+    grid-column: 1/3;
+}
+
+* {
+    box-sizing: border-box;
+    color: white;
+}
+
+input,
+button {
+    height: 70px;
+    outline: none;
+}
+
+input {
+    width: 100%;
+    text-align: right;
+    border: none;
+    background: #5B5B5D;
+    padding-right: 1rem;
+    font-size: 3rem;
+}
