계산기 만들기

--- a/gyesangi.css
+++ b/gyesangi.css
@@ -1,23 +1,16 @@
+* {
+    box-sizing: border-box;
+    color: white;
+}
+
 main {
     width: 300px;
 }
 
-.button-gsg {
+.button-wrap {
     display: grid;
+    /* 한 줄에 4개씩, 모두 동일한 비율 적용(1:1:1:1) */
     grid-template-columns: repeat(4, 1fr);
-}
-
-.ac {
-    grid-column: 1/4;
-}
-
-.zero {
-    grid-column: 1/3;
-}
-
-* {
-    box-sizing: border-box;
-    color: white;
 }
 
 input,
@@ -52,10 +45,12 @@ button:hover {
 }
 
 .ac {
+    /* 첫 번째 선부터 4번째 선까지 지정 */
     grid-column: 1/4;
     background: #6A6A6C;
 }
 
 .zero {
+    /* 첫 번째 선부터 3번째 선까지 지정 */
     grid-column: 1/3;
 }
